# model-portfolio

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docker/: Dockerfile.frontend  Dockerfile.jupyter
notebooks/: mongo-db.ipynb
src/interface/: __init__.py  __main__.py  app.py  auth.py  auth_store.py  config.py  settings.py  utils.py
src/interface/assets/: instructions.md  plots.mplstyle  style.css
src/interface/elements/: front.py  settings.py  sidebar.py
src/interface/pages/: app1.py  app2.py  app3.py  main.py
src/streamlit_app/: app.py
src/streamlit_app/assets/: style.css
