[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "streamlit-app"
version = "0.1.0"
description = "Supersimple, professional Streamlit app packaged for distribution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "pydantic-settings>=2.2.1",
  "streamlit>=1.33.0",
  "pymongo==3.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_app"]

[tool.hatch.build.targets.wheel.shared-data]
"streamlit_app/assets" = "streamlit_app/assets"

[tool.hatch.build.targets.sdist]
include = [
  "src/assets/**",
  "streamlit_app/assets/**"
]

[tool.ruff]
line-length = 100
target-version = "py311"
